--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,8 @@
 	"exclude": ["src/**/*.test.ts"],
 	"compilerOptions": {
 		"outDir": "./dist",
-		"declaration": true
+		"declaration": true,
+    "declarationMap": true,
+    "sourceMap": true,
 	}
 }
