--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "eslint-plugin-ban-nullpo",
+	"name": "eslint-plugin-nullpo",
 	"description": "An ESLint plugin to detect ぬるぽ (nullpo) in your code",
 	"version": "0.0.1",
 	"type": "module",
@@ -7,7 +7,7 @@
 	"license": "MIT",
 	"repository": {
 		"type": "git",
-		"url": "git+https://github.com/morinokami/eslint-plugin-ban-nullpo.git"
+		"url": "git+https://github.com/morinokami/eslint-plugin-nullpo.git"
 	},
 	"packageManager": "pnpm@9.8.0",
 	"keywords": ["eslint", "eslintplugin", "eslint-plugin", "ぬるぽ"],
