--- a/package.json
+++ b/package.json
@@ -21,13 +21,13 @@
 		"@biomejs/biome": "1.8.3",
 		"@tsconfig/recommended": "1.0.7",
 		"@types/node": "22.5.0",
-		"@typescript-eslint/parser": "^8.3.0",
+		"@typescript-eslint/parser": "8.3.0",
 		"@typescript-eslint/rule-tester": "8.2.0",
 		"@typescript-eslint/utils": "8.2.0",
 		"knip": "5.27.4",
 		"pkg-pr-new": "0.0.20",
 		"typescript": "5.5.4",
-		"vitest": "^2.0.5"
+		"vitest": "2.0.5"
 	},
 	"peerDependencies": {
 		"eslint": ">=9.0.0"
