--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -24,10 +24,10 @@ jobs:
         run: pnpm install --frozen-lockfile
 
       - name: Run Biome check command
-        run: pnpm dlx @biomejs/biome check ./src
+        run: pnpm biome check ./src
 
       - name: Run Knip
-        run: pnpm dlx knip
+        run: pnpm knip
 
       - name: Test
         run: pnpm test
@@ -37,3 +37,6 @@ jobs:
 
       - name: Run publint
         run: pnpm dlx publint
+
+      - name: Run arethetypeswrong
+        run: pnpm attw --pack . --ignore-rules=cjs-resolves-to-esm
