--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"build": "tsc"
 	},
 	"devDependencies": {
+		"@arethetypeswrong/cli": "0.15.4",
 		"@biomejs/biome": "1.8.3",
 		"@changesets/changelog-github": "0.5.0",
 		"@changesets/cli": "2.27.7",
