--- a/package.json
+++ b/package.json
@@ -12,7 +12,12 @@
 	"packageManager": "pnpm@9.8.0",
 	"keywords": ["eslint", "eslintplugin", "eslint-plugin", "ぬるぽ"],
 	"files": ["dist"],
-	"main": "dist/index.js",
+	"exports": {
+		"./package.json": "./package.json",
+		".": {
+			"import": "./dist/index.js"
+		}
+	},
 	"scripts": {
 		"test": "vitest",
 		"build": "tsc"
@@ -29,6 +34,7 @@
 		"@typescript-eslint/utils": "8.2.0",
 		"knip": "5.27.4",
 		"pkg-pr-new": "0.0.20",
+		"publint": "0.2.10",
 		"typescript": "5.5.4",
 		"vitest": "2.0.5"
 	},
