--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -36,7 +36,7 @@ jobs:
         run: pnpm build
 
       - name: Run publint
-        run: pnpm dlx publint
+        run: pnpm publint
 
       - name: Run arethetypeswrong
         run: pnpm attw --pack . --ignore-rules=cjs-resolves-to-esm
