--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
 		"test": "vitest",
 		"build": "tsc"
 	},
+	"dependencies": {
+		"@typescript-eslint/utils": "8.2.0"
+	},
 	"devDependencies": {
 		"@arethetypeswrong/cli": "0.15.4",
 		"@biomejs/biome": "1.8.3",
@@ -26,7 +29,6 @@
 		"@types/node": "22.5.0",
 		"@typescript-eslint/parser": "8.3.0",
 		"@typescript-eslint/rule-tester": "8.2.0",
-		"@typescript-eslint/utils": "8.2.0",
 		"knip": "5.27.4",
 		"pkg-pr-new": "0.0.20",
 		"publint": "0.2.10",
